--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <h2>Syifa</h2>
           <h3>Pelajar</h3>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam sit voluptatum aut!</p>
-          <div class="links"><a href="#">GitHub</a><a href="#">Biodata</a></div>
+          <div class="links"><a href="#">GitHub</a><a href="biodatasyifa.html">Biodata</a></div>
         </div>
 
         <!-- Card Ratu -->
