--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <h2>Fauzan M</h2>
           <h3>Pelajar</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolore vitae a!</p>
-          <div class="links"><a href="#">GitHub</a><a href="#">Biodata</a></div>
+          <div class="links"><a href="#">GitHub</a><a href="biodata.html">Biodata</a></div>
         </div>
 
         <!-- Card Neval -->
