menambahkan biodata rifki

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <h2>Rifki</h2>
           <h3>Pelajar</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio explicabo laudantium soluta!</p>
-          <div class="links"><a href="#">GitHub</a><a href="#">Biodata</a></div>
+          <div class="links"><a href="#">GitHub</a><a href="biorifki.html">Biodata</a></div>
         </div>
 
         <!-- Card Fauzan M -->
@@ -64,7 +64,7 @@
           <h2>Neval</h2>
           <h3>Pelajar</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique porro eius quibusdam!</p>
-          <div class="links"><a href="#">GitHub</a><a href="#">Biodata</a></div>
+          <div class="links"><a href="#">GitHub</a><a href="vall.html">Biodata</a></div>
         </div>
       </div>
     </main>
