update html & css

--- a/biodata.html
+++ b/biodata.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
 <html lang="id">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Biodata Pribadi</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/fauzan.css" />
+  </head>
+  <body>
     <div class="card">
-        <div class="profile">
-            <img src="https://via.placeholder.com/150" alt="Foto Profil">
-            <h1>Fauzan M.iqbal</h1>
-            <p>Pelajar dan Pengembang Web</p>
-        </div>
+      <div class="profile">
+        <img src="https://via.placeholder.com/150" alt="Foto Profil" />
+        <h1>Fauzan M.iqbal</h1>
+        <p>Pelajar dan Pengembang Web</p>
+      </div>
 
-        <div class="biodata">
-            <h2>Biodata Pribadi</h2>
-            <ul>
-                <li><strong>Nama:</strong> Fauzan M.iqbal</li>
-                <li><strong>Tempat, Tanggal Lahir:</strong> Garut, 1 November 2008</li>
-                <li><strong>umur:</strong> 16</li>
-            </ul>
-        </div>
+      <div class="biodata">
+        <h2>Biodata Pribadi</h2>
+        <ul>
+          <li><strong>Nama:</strong> Fauzan M.iqbal</li>
+          <li>
+            <strong>Tempat, Tanggal Lahir:</strong> Garut, 1 November 2008
+          </li>
+          <li><strong>umur:</strong> 16</li>
+        </ul>
+      </div>
 
-        <div class="social">
-            <a href="#">LinkedIn</a>
-            <a href="#">GitHub</a>
-            <a href="#">Instagram</a>
-        </div>
+      <div class="social">
+        <a href="#">LinkedIn</a>
+        <a href="#">GitHub</a>
+        <a href="#">Instagram</a>
+      </div>
     </div>
-</body>
+  </body>
 </html>
