--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main>
       <!-- Title -->
       <div class="title-section">
-        <h1>Kelompok 3</h1>
+        <h1>Portofolio Kelompok 3</h1>
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
 
@@ -27,8 +27,13 @@
           <div class="foto"><img src="" alt="Foto Syifa" /></div>
           <h2>Syifa</h2>
           <h3>Pelajar</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam sit voluptatum aut!</p>
-          <div class="links"><a href="#">GitHub</a><a href="biodatasyifa.html">Biodata</a></div>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus,
+            quisquam!
+          </p>
+          <div class="links">
+            <a href="#">GitHub</a><a href="biodatasyifa.html">Tugas</a>
+          </div>
         </div>
 
         <!-- Card Ratu -->
@@ -36,8 +41,11 @@
           <div class="foto"><img src="" alt="Foto Ratu" /></div>
           <h2>Ratu</h2>
           <h3>Pelajar</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis ea commodi minima!</p>
-          <div class="links"><a href="#">GitHub</a><a href="#">Biodata</a></div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
+            veritatis!
+          </p>
+          <div class="links"><a href="#">GitHub</a><a href="#">Tugas</a></div>
         </div>
 
         <!-- Card Rifki -->
@@ -45,8 +53,13 @@
           <div class="foto"><img src="" alt="Foto Rifki" /></div>
           <h2>Rifki</h2>
           <h3>Pelajar</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio explicabo laudantium soluta!</p>
-          <div class="links"><a href="#">GitHub</a><a href="biorifki.html">Biodata</a></div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure,
+            ipsum?
+          </p>
+          <div class="links">
+            <a href="#">GitHub</a><a href="biorifki.html">Tugas</a>
+          </div>
         </div>
 
         <!-- Card Fauzan M -->
@@ -54,8 +67,13 @@
           <div class="foto"><img src="" alt="Foto Fauzan M" /></div>
           <h2>Fauzan M</h2>
           <h3>Pelajar</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolore vitae a!</p>
-          <div class="links"><a href="#">GitHub</a><a href="biodata.html">Biodata</a></div>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi,
+            tenetur.
+          </p>
+          <div class="links">
+            <a href="#">GitHub</a><a href="biodata.html">Tugas</a>
+          </div>
         </div>
 
         <!-- Card Neval -->
@@ -63,8 +81,13 @@
           <div class="foto"><img src="" alt="Foto Neval" /></div>
           <h2>Neval</h2>
           <h3>Pelajar</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique porro eius quibusdam!</p>
-          <div class="links"><a href="#">GitHub</a><a href="vall.html">Biodata</a></div>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Perferendis, sed!
+          </p>
+          <div class="links">
+            <a href="#">GitHub</a><a href="vall.html">Tugas</a>
+          </div>
         </div>
       </div>
     </main>
@@ -72,7 +95,10 @@
     <!-- Footer -->
     <footer>
       <p>© 2025 Kelompok 3</p>
-      <p><a href="#">Tentang Kami</a> | <a href="#">GitHub</a></p>
+      <p>
+        <a href="#">Tentang Kami</a> |
+        <a href="#">GitHub</a>
+      </p>
     </footer>
   </body>
 </html>
