--- a/biodatasyifa.html
+++ b/biodatasyifa.html
@@ -12,7 +12,9 @@
         <div class="profile">
           <div class="avatar">SO</div>
           <div class="meta">
-            <h1 id="nama">Biodata: <span style="color: var(--accent)">Syifa Oktaviani</span></h1>
+            <h1 id="nama">
+              Biodata: <span style="color: var(--accent)">Syifa Oktaviani</span>
+            </h1>
             <p id="kelas">Kelas: XI PPL 2</p>
           </div>
         </div>
@@ -21,10 +23,21 @@
       <main>
         <h2 style="margin: 0 0 16px; color: var(--accent)">Detail Informasi</h2>
         <ul class="bio-list">
-          <li><span class="label">Nama Lengkap:</span><span class="value">Syifa Oktaviani</span></li>
-          <li><span class="label">Kelas:</span><span class="value">XI PPL 2</span></li>
-          <li><span class="label">Alamat:</span><span class="value">Kp Babakan Jambe</span></li>
-          <li><span class="label">Tanggal Lahir:</span><span class="value">17 Oktober 2009</span></li>
+          <li>
+            <span class="label">Nama Lengkap:</span
+            ><span class="value">Syifa Oktaviani</span>
+          </li>
+          <li>
+            <span class="label">Kelas:</span><span class="value">XI PPL 2</span>
+          </li>
+          <li>
+            <span class="label">Alamat:</span
+            ><span class="value">Kp Babakan Jambe</span>
+          </li>
+          <li>
+            <span class="label">Tanggal Lahir:</span
+            ><span class="value">17 Oktober 2009</span>
+          </li>
         </ul>
       </main>
 
@@ -32,8 +45,15 @@
         <div style="font-weight: 700">© 2025 Kelompok 3</div>
         <div class="footer-links">
           <a href="index.html">Beranda</a>
-          <a href="https://instagram.com/" target="_blank" rel="noopener">
-            <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram" />
+          <a
+            href="https://www.instagram.com/ursyxfaa_?igsh=MXdleHZ2eGFlczE0aw=="
+            target="_blank"
+            rel="noopener"
+          >
+            <img
+              src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png"
+              alt="Instagram"
+            />
           </a>
         </div>
       </footer>
