--- a/khanzaa.html
+++ b/khanzaa.html
@@ -100,8 +100,8 @@
       <footer>
         <div>© 2025 — Sekolah Kita</div>
         <div class="footer-links">
-          <a href="#">Beranda</a>
-          <a href="https://github.com/ratuu12" target="_blank">GitHub</a>
+          <a href="index.html">Beranda</a>
+          <a href="https://github.com/ratuu12/kelompok-3" target="_blank">GitHub</a>
         </div>
       </footer>
     </section>
