--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <!-- Title -->
       <div class="title-section">
         <h1>Portofolio Kelompok 3</h1>
-        <p>Lorem ipsum dolor sit amet.</p>
+        <p>Lima orang, anak baik,  no toxic-toxic.</p>
       </div>
 
       <!-- Badges -->
@@ -28,8 +28,7 @@
           <h2>Syifa</h2>
           <h3>Pelajar</h3>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus,
-            quisquam!
+            Membuat repository, membuat halaman, membuat bioadata Syifa, mengcommit.
           </p>
           <div class="links">
             <a href="#">GitHub</a><a href="biodatasyifa.html">Tugas</a>
@@ -39,13 +38,12 @@
         <!-- Card Ratu -->
         <div class="card">
           <div class="foto"><img src="" alt="Foto Ratu" /></div>
-          <h2>Ratu</h2>
+          <h2>Ratu Khanzaa</h2>
           <h3>Pelajar</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
-            veritatis!
+            Membuat biodata Ratu, mengcommit, dan memfork.
           </p>
-          <div class="links"><a href="#">GitHub</a><a href="#">Tugas</a></div>
+          <div class="links"><a href="https://github.com/ratuu12/kelompok-3">GitHub</a><a href="khanzaa.html">Tugas</a></div>
         </div>
 
         <!-- Card Rifki -->
@@ -54,8 +52,7 @@
           <h2>Rifki</h2>
           <h3>Pelajar</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure,
-            ipsum?
+            Membuat biodata Rifki, mengcommit dan memfork.
           </p>
           <div class="links">
             <a href="#">GitHub</a><a href="biorifki.html">Tugas</a>
@@ -68,8 +65,7 @@
           <h2>Fauzan M</h2>
           <h3>Pelajar</h3>
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi,
-            tenetur.
+            Membuat biodata Fauzan M, mengcommit dan memfork.
           </p>
           <div class="links">
             <a href="#">GitHub</a><a href="biodata.html">Tugas</a>
@@ -82,8 +78,7 @@
           <h2>Neval</h2>
           <h3>Pelajar</h3>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Perferendis, sed!
+           Membuat biodata Neval, mengcommit dan memfork.
           </p>
           <div class="links">
             <a href="#">GitHub</a><a href="vall.html">Tugas</a>
@@ -96,8 +91,7 @@
     <footer>
       <p>© 2025 Kelompok 3</p>
       <p>
-        <a href="#">Tentang Kami</a> |
-        <a href="#">GitHub</a>
+        <a href="https://github.com/iamsyifaa/kelompok-3">GitHub</a>
       </p>
     </footer>
   </body>
