--- a/biorifki.html
+++ b/biorifki.html
@@ -85,7 +85,7 @@
 </head>
 <body>
   <div class="card">
-    <img src="img/avatar.jpg" alt="Foto Rifki">
+    <img src="img/avatar.jpeg" alt="Foto Rifki">
     <h2>Rifki Hadiyan Syamil</h2>
 
     <div class="info">
