--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <!-- Card Rifki -->
         <div class="card">
-          <div class="foto"><img src="" alt="Foto Rifki" /></div>
+          <div class="foto"><img src="img/wel.jpeg" alt="Foto Rifki" /></div>
           <h2>Rifki</h2>
           <h3>Pelajar</h3>
           <p>
