--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
         <!-- Card Neval -->
         <div class="card">
-          <div class="foto"><img src="" alt="Foto Neval" /></div>
+          <div class="foto"><img src="img/neval.jpg" alt="Foto Neval" /></div>
           <h2>Neval</h2>
           <h3>Pelajar</h3>
           <p>
