--- a/biodata.html
+++ b/biodata.html
@@ -9,7 +9,7 @@
   <body>
     <div class="card">
       <div class="profile">
-        <img src="https://via.placeholder.com/150" alt="Foto Profil" />
+        <img src="img/fauzan m.jpg.jpg" alt="Foto Profil" />
         <h1>Fauzan M.iqbal</h1>
         <p>Pelajar dan Pengembang Web</p>
       </div>
