--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <!-- Card Fauzan M -->
         <div class="card">
-          <div class="foto"><img src="" alt="Foto Fauzan M" /></div>
+          <div class="foto"><img src="img/fauzan m.jpg.jpg" alt="Foto Fauzan M" /></div>
           <h2>Fauzan M</h2>
           <h3>Pelajar</h3>
           <p>
