--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <!-- Card Ratu -->
         <div class="card">
-          <div class="foto"><img src="" alt="Foto Ratu" /></div>
+          <div class="foto"><img src="img/miaw.jpg" alt="Foto Ratu" /></div>
           <h2>Ratu Khanzaa</h2>
           <h3>Pelajar</h3>
           <p>
