--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <!-- Title -->
       <div class="title-section">
         <h1>Portofolio Kelompok 3</h1>
-        <p>Lima orang, anak baik,  no toxic-toxic.</p>
+        <p>Lima orang anak baik, no toxic-toxic.</p>
       </div>
 
       <!-- Badges -->
@@ -24,7 +24,7 @@
       <div class="cards">
         <!-- Card Syifa -->
         <div class="card">
-          <div class="foto"><img src="" alt="Foto Syifa" /></div>
+          <div class="foto"><img src="img/boom.jpg" alt="Foto Syifa" /></div>
           <h2>Syifa</h2>
           <h3>Pelajar</h3>
           <p>
